name:                bc-tools
version:             0.1.0.0
synopsis:            Command-line tools for working with blockchains.
description:         Please see README.md
homepage:            https://github.com/shmookey/bc-tools
license:             BSD3
license-file:        LICENSE
author:              Luke A Williams
maintainer:          shmookey@shmookey.net
copyright:           2016 Luke A Williams
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable arc
  hs-source-dirs:      src
  main-is:             arc.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , streaming-commons
                     , network
                     , optparse-applicative


