name:                bc-tools
version:             0.1.0.0
synopsis:            Command-line tools for working with blockchains.
description:         Please see README.md
homepage:            https://github.com/shmookey/bc-tools
license:             BSD3
license-file:        LICENSE
author:              Luke A Williams
maintainer:          shmookey@shmookey.net
copyright:           2016 Luke A Williams
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable arc
  hs-source-dirs:      src
  main-is:             arc.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , streaming-commons
                     , network
                     , optparse-applicative

executable jrc
  hs-source-dirs:      src
  main-is:             jrc.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , streaming-commons
                     , network
                     , optparse-applicative

executable munt
  hs-source-dirs:      src
  main-is:             munt.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , asn1-encoding
                     , asn1-types
                     , base64-bytestring
                     , bytestring
                     , conduit
                     , conduit-combinators
                     , containers
                     , cryptonite
                     , digits
                     , hex
                     , memory
                     , nats
                     , optparse-applicative
                     , parsec
                     , process
                     , split
                     , strict
                     , text
                     , transformers

test-suite munt-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, src
  main-is:             MuntSpec.hs
  build-depends:       base
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

